# axiomatic_oracle

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ecs-task-definition.json  package-lock.json  package.json  pyproject.toml  requirements.txt  sample_property.json  start.bat  test.bat
.ipynb_checkpoints/: README-checkpoint.md
analysis/: anomalies.csv
axiomatic-ui/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
data/: df_cleaned_no_outliers.csv  outliers_valuation.csv  predictions_log.jsonl  property_dataset_mvp.csv  property_dataset_mvp_multi_rwa.csv  property_dataset_v1.csv  property_dataset_v2.csv  property_dataset_v2.parquet  property_dataset_v2_metadata.json  property_dataset_v2_sample.json  sample_property.json
golden/: p1_expected.json  p1_expected.sha256  p1_input.json
notebooks/: 01_generate_dataset.ipynb  02_explore_dataset.ipynb  03_train_model.ipynb  04_infer_single_sample.ipynb  explore_dataset_02.ipynb  generate_dataset_01.ipynb  infer_single_sample_04.ipynb  train_model_03.ipynb
python/axiomatic_proofkit/: build.py  jcs.py  publish.py  pyproject.toml
python/axiomatic_verifier/: __init__.py  jcs.py  pyproject.toml  verifier.py
schemas/: output_example.json  output_schema_def.json  output_schema_pr1_v1.json  output_schema_v1.json  output_schema_v2.json  poproof_v1_compact.schema.json  poproof_v1_full.schema.json  poval_v1_compact.schema.json  poval_v1_full.schema.json
scripts/: algorand_utils.py  attestation_registry.py  blockchain_publisher.py  canon.py  common.py  (+13 more)
(+138 files in other folders)
