[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
explicit_package_bases = true
check_untyped_defs = true
disallow_untyped_defs = true
namespace_packages = true
show_error_codes = true
exclude = ["notebooks"]

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
exclude = '''
/(
    notebooks
)/
'''

[tool.ruff]
line-length = 88
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
