[project]
name = "axiomatic_verifier"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[tool.setuptools]
packages = ["axiomatic_verifier"]

[tool.setuptools.package-dir]
axiomatic_verifier = "."

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"